# waste

./: .gitignore  LICENSE  README.md  forum.waste  pyproject.toml  syntax.md  todo.md  types.md  waste.py  waste_test.py
doc/: lisp.md  notes-gui.md  notes-tools.md  types.md
example/scowl/: basic-window.scowl  text-window.scowl
fonts/: LICENSE  unicode_p9-8x15.hex
script/: bdf2hex.py
waste/: __installer.py  aidem.py  archivist.py  av.py  bitblt.py  cli.py  debug.py  doodle.py  doodle_test.py  draw.py  draw2.py  font.py  gui.py  media.py  melody.py  nabu.py  scribe.py  testgui_utils.py  unicode8x15.py  waste.py  waste_test.py  yt.py
waste/scowl/: __init__.py  machine.py  reader.py  reader_test.py  runtime.py  type.py  type_test.py
