[tool.poetry]
name = "waste"
version = "0.1.0"
description = ""
authors = ["latrokles"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
gnureadline = "^8.2.13"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.4"

[tool.coverage.run]
branch = true
source = ["waste"]
command_line = "-m unittest waste/waste_test.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
marimba = "waste.marimba:main"
