[tool.poetry]
name = "waste"
version = "0.1.0"
description = ""
authors = ["latrokles"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
gnureadline = "^8.2.13"
watchdog = "^5.0.3"
pysdl2 = "^0.9.16"
click = "^8.1.7"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.4"
flake8 = "^7.1.1"

[tool.coverage.run]
branch = true
source = ["waste"]
command_line = "-m unittest waste/waste_test.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
waste = "waste.cli:cli"
