[tool.poetry]
name = "waste"
version = "0.1.0"
description = ""
authors = ["latrokles"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
requests = "^2.32.3"
gnureadline = "^8.2.13"
watchdog = "^5.0.3"
pysdl2 = "^0.9.16"
click = "^8.1.7"
pillow = "^11.0.0"
pyinstaller = "^6.11.0"
markdown = "^3.7"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.4"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-html = "^4.1.1"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=waste --cov-branch --cov-report=html:dev/reports/cov --cov-report=term --html=dev/reports/tst/index.html"
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "waste.__installer:install"
waste = "waste.cli:cli"
